@@ -1,21 +1,22 @@
 package redis.clients.jedis.tests.commands;
 
-import static org.hamcrest.CoreMatchers.*;
-import org.junit.*;
+import static org.hamcrest.CoreMatchers.containsString;
+import static org.junit.Assert.*;
+
+import java.util.Arrays;
+import java.util.List;
+import org.junit.Before;
+import org.junit.Test;
+
 import redis.clients.jedis.AccessControlUser;
 import redis.clients.jedis.Jedis;
 import redis.clients.jedis.Transaction;
 import redis.clients.jedis.exceptions.JedisAccessControlException;
 import redis.clients.jedis.tests.utils.RedisVersionUtil;
-
-import java.util.List;
-
-import static org.junit.Assert.*;
+import redis.clients.jedis.util.SafeEncoder;
 
 // TODO :properly define and test exceptions
-
 public class AccessControlListCommandsTest extends JedisCommandTestBase {
-
 
   public static String USER_YYY = "yyy";
   public static String USER_ZZZ = "zzz";
@@ -36,36 +37,40 @@ public class AccessControlListCommandsTest extends JedisCommandTestBase {
 
   @Test
   public void aclWhoAmI() {
-    String returnValue = jedis.aclWhoAmI();
-    assertEquals("default", returnValue);
-  }
+    String string = jedis.aclWhoAmI();
+    assertEquals("default", string);
 
-  @Test
-  public void aclWhoAmIBinary() {
-    byte[] returnValue = jedis.aclWhoAmIBinary();
-    assertNotNull(returnValue);
+    byte[] binary = jedis.aclWhoAmIBinary();
+    assertArrayEquals(SafeEncoder.encode("default"), binary);
   }
 
   @Test
   public void aclListDefault() {
-    assertEquals(1, jedis.aclList().size());
-  }
-
-  @Test
-  public void aclListBinaryDefault() {
-    assertEquals(1, jedis.aclListBinary().size());
+    assertTrue(jedis.aclList().size() > 0);
+    assertTrue(jedis.aclListBinary().size() > 0);
   }
 
   @Test
   public void addAndRemoveUser() {
+    int existingUsers = jedis.aclList().size();
+
     String status = jedis.aclSetUser(USER_ZZZ);
     assertEquals("OK", status);
-    assertEquals(2, jedis.aclList().size());
-    assertEquals(2, jedis.aclListBinary().size()); // test binary
+    assertEquals(existingUsers + 1, jedis.aclList().size());
+    assertEquals(existingUsers + 1, jedis.aclListBinary().size()); // test binary
 
     jedis.aclDelUser(USER_ZZZ);
-    assertEquals(1, jedis.aclList().size());
-    assertEquals(1, jedis.aclListBinary().size()); // test binary
+    assertEquals(existingUsers, jedis.aclList().size());
+    assertEquals(existingUsers, jedis.aclListBinary().size()); // test binary
+  }
+
+  @Test
+  public void aclUsers() {
+    List<String> users = jedis.aclUsers();
+    assertEquals(2, users.size());
+    assertTrue(users.contains("default"));
+
+    assertEquals(2, jedis.aclUsersBinary().size()); // Test binary
   }
 
   @Test
@@ -94,9 +99,9 @@ public class AccessControlListCommandsTest extends JedisCommandTestBase {
     jedis.aclSetUser(USER_ZZZ, "reset", "+@all", "~*", "-@string", "+incr", "-debug",
       "+debug|digest");
     userInfo = jedis.aclGetUser(USER_ZZZ);
-    Assert.assertThat(userInfo.getCommands(), containsString("+@all"));
-    Assert.assertThat(userInfo.getCommands(), containsString("-@string"));
-    Assert.assertThat(userInfo.getCommands(), containsString("+debug|digest"));
+    assertThat(userInfo.getCommands(), containsString("+@all"));
+    assertThat(userInfo.getCommands(), containsString("-@string"));
+    assertThat(userInfo.getCommands(), containsString("+debug|digest"));
 
     jedis.aclDelUser(USER_ZZZ);
 
@@ -434,34 +439,11 @@ public class AccessControlListCommandsTest extends JedisCommandTestBase {
   }
 
   @Test
-  public void aclUsers() {
-    List<String> users = jedis.aclUsers();
-    assertEquals( 1, users.size() );
-    assertEquals( "default", users.get(0) );
-
-    assertEquals( 1, jedis.aclUsersBinary().size() ); // Test binary
-
-    //add new user
-    jedis.aclSetUser(USER_ZZZ);
-    users = jedis.aclUsers();
-    assertEquals( 2, users.size() );
-    assertEquals( "default", users.get(0) );
-    assertEquals( USER_ZZZ, users.get(1) );
-
-    assertEquals( 2, jedis.aclUsersBinary().size() ); // Test binary
-
-    //delete user
-    jedis.aclDelUser(USER_ZZZ);
-
-  }
-
-  @Test
   public void aclBinaryCommandsTest() {
     jedis.aclSetUser(USER_ZZZ.getBytes());
-    assertEquals(2, jedis.aclList().size());
-    assertNotNull( jedis.aclGetUser(USER_ZZZ) );
+    assertNotNull(jedis.aclGetUser(USER_ZZZ));
 
-    assertEquals( new Long(1) , jedis.aclDelUser(USER_ZZZ.getBytes()) );
+    assertEquals(Long.valueOf(1L), jedis.aclDelUser(USER_ZZZ.getBytes()));
 
     jedis.aclSetUser(USER_ZZZ.getBytes(),
             "reset".getBytes(),
@@ -474,9 +456,9 @@ public class AccessControlListCommandsTest extends JedisCommandTestBase {
 
     AccessControlUser userInfo = jedis.aclGetUser(USER_ZZZ.getBytes());
 
-    Assert.assertThat(userInfo.getCommands(), containsString("+@all"));
-    Assert.assertThat(userInfo.getCommands(), containsString("-@string"));
-    Assert.assertThat(userInfo.getCommands(), containsString("+debug|digest"));
+    assertThat(userInfo.getCommands(), containsString("+@all"));
+    assertThat(userInfo.getCommands(), containsString("-@string"));
+    assertThat(userInfo.getCommands(), containsString("+debug|digest"));
 
     jedis.aclDelUser(USER_ZZZ.getBytes());
   }
